<resources>
    <string name="app_name">乐学</string>

    <string name="neg_ten">-10</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="fifty">50</string>
    <string name="ninety">90</string>

    <string name="move">移动</string>
    <string name="step">步</string>
    <string name="move_x">移到x:</string>
    <string name="y">y:</string>
    <string name="degree">度</string>
    <string name="left_rotate">左转</string>
    <string name="right_rotate">右转</string>
    <string name="increase_x">将x坐标增加</string>
    <string name="increase_y" translatable="false">将y坐标增加</string>
    <string name="decrease_x">将x坐标减少</string>
    <string name="decrease_y">将y坐标减少</string>
    <string name="set_x">将x坐标设为</string>
    <string name="set_y">将y坐标设为</string>
    <string name="say">说</string>
    <string name="hello">你好!</string>
    <string name="next_bg">下一个背景</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="stop_all_voice">停止所有声音</string>
    <string name="increase_voice">将音量增加</string>
    <string name="decrease_voice">将音量减少</string>
    <string name="play_voice">播放声音</string>
    <string name="click_role">当角色被点击</string>
    <string name="when_str">当</string>
    <string name="click">被点击</string>
    <string name="circulation">重复执行</string>
    <string name="circulation_until">重复执行直到</string>
    <string name="count">次</string>
    <string name="wait">等待</string>
    <string name="seconds">秒</string>
    <string name="if_str">如果</string>
    <string name="then">那么</string>
    <string name="else_str">否则</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="and">与</string>
    <string name="or">或</string>
    <string name="not">不成立</string>
    <string name="get_through">闯关</string>
    <string name="free_programme">自由编程</string>
    <string name="motion">运动</string>
    <string name="appearance">外观</string>
    <string name="voice">声音</string>
    <string name="event">事件</string>
    <string name="control">控制</string>
    <string name="calculate">运算</string>
    <string name="study_n">学\n\n习</string>
    <string name="programme_n">编\n\n程</string>
    <string name="run">run</string>
    <string name="x">x:</string>
    <string name="direction">方向</string>
    <string name="role">role</string>
    <string name="back">back</string>
    <string name="programme_area">程序区</string>
    <string name="next_step">下一步</string>
    <string name="color">颜色</string>
    <string name="fill_style">填充模式</string>
    <string name="line_w">线宽</string>
    <string name="radius">半径</string>
    <string name="center">中心</string>
    <string name="draw_circle">画圆</string>
    <string name="cx">cx</string>
    <string name="cy">cy</string>
    <string name="draw_rect">画矩形</string>
    <string name="left_top">左上</string>
    <string name="right_bottom">右下</string>
    <string name="draw_line">画线</string>
    <string name="start_p">起点</string>
    <string name="end_p">终点</string>
    <string name="x2">x2</string>
    <string name="y2">y2</string>
    <string name="y1">y1</string>
    <string name="x1">x1</string>
    <string name="draw_point">绘制点</string>
    <string name="draw_ring">画圆环</string>
    <string name="draw_fill_circle">画实心圆</string>
    <string name="draw_square">画正方形</string>
    <string name="draw_triangle">画三角形</string>
    <string name="top">顶点</string>
    <string name="left_bottom">左下</string>
    <string name="border_length">边长</string>
    <string name="draw">绘制</string>
    <string name="equal">=</string>
    <string name="less_than"><![CDATA[<]]></string>
    <string name="more_than"><![CDATA[>]]></string>
    <string name="i">i</string>
    <string name="variable">变量</string>
    <string name="lower_case_letter">abcdefghijklmnopqrstuvwxyz</string>
    <string name="introduce_blocks">积木介绍</string>
    <string name="get_time">获取时间</string>
    <string name="name">name</string>
    <string name="mod">%</string>
</resources>
